FIX: password button visibility

--- a/src/app/core/components/login/login.component.scss
+++ b/src/app/core/components/login/login.component.scss
@@ -22,6 +22,10 @@
             flex-flow: column nowrap;
             justify-content: flex-start;
 
+            .icono-ver-pass {
+                color: $texto_alt !important;
+            }
+
             .mat-mdc-form-field {
                 width: 500px;
                 margin: 0 auto;
